Darwin App Updates, Working Device Auth Flow, Android Client Init
